# rust-zero2prod

./: Cargo.toml  configuration.yml  default.nix
.github/workflows/: general.yml
migrations/: 20220813162339_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
