[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["JVictorV <contato@jvictorv.top>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
tokio = {version = "1.20.1", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
config = "0.13"
uuid = {version = "1.1", features = ["v4"]}
chrono = "0.4"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]