[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["JVictorV <contato@jvictorv.top>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
tokio = {version = "1.20.1", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
config = "0.13"
uuid = {version = "1.1", features = ["v4"]}
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1.15.0"
secrecy = {version = "0.8.0", features = ["serde"]}
tracing-actix-web = "0.6.1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
